# hurl

./: .gitignore  .gitmodules  ChangeLog.md  LICENSE-APACHE  LICENSE-MIT  README.md  cabal.project  flake.nix  hurl.cabal  package.yaml
app/: Main.hs  Main.hs.old
benchmark/: Main.hs
cbits/: curl_hs_c.c  curl_hs_c.h  curl_hs_c_old.h  curl_metrics.c  curl_metrics.h  curl_uv.c  curl_uv.h  extras.c  extras.h  headers.c  headers.h  message_chan.c  message_chan.h  simple_string.c  simple_string.h
examples/: Main.hs
src/: Agent.hs  Event.hs  Extras.hs  Poller.hs  PyFCustom.hs  Request.hs  Response.hs  Resumer.hs  Simple.hs  Types.hs
src/Internal/: Callbacks.hs  Easy.hs  Headers.hs  MPSC.hs  Metrics.hs  Multi.hs  Options.hs  Raw.hs  Slist.hs
src/Internal/Options/: Class.hs  TH.hs
src/Internal/Raw/: Alloc.hs  Context.hs  Curl.chs  CurlFunctions.hs  Extras.chs  Headers.chs  MPSC.chs  Metrics.chs  SimpleString.chs  SocketEvents.chs  UV.chs
